src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Agent__c</fullName>
        <label>Agent</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <description>GI Approvals</description>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicator_s_requesting_approval__c</fullName>
        <description>April 2014 GI Approvals: Applicator(s) requesting approval</description>
        <label>Applicator(s) requesting approval</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approved_Valspar_Product_Codes__c</fullName>
        <description>April 2014 GI Approvals: Approved Valspar Product Codes</description>
        <label>Approved Valspar Product Codes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approver_Type__c</fullName>
        <description>April 2014 GI Approvals: Approver Type</description>
        <label>Approver Type</label>
        <picklist>
            <controllingField>Market_Approval_Type__c</controllingField>
            <picklistValues>
                <fullName>Private Car Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End User Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering Firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pipe Mill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pipe Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping Lines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leasing Companies</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coil/Extrusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer DB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer PD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3D Laser Sintering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mirror</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graphic Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Plastikote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer B&amp;Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Wattyl Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Lowes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Ace</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CDA__c</fullName>
        <label>CDA</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consignment__c</fullName>
        <label>Consignment</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_Savings_Description__c</fullName>
        <label>Cost Savings Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Savings_Status__c</fullName>
        <label>Cost Savings Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_Savings__c</fullName>
        <label>Cost Savings</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Freight_Description__c</fullName>
        <description>If Contract Terms do not meet standard terms, they can be described in this field.</description>
        <inlineHelpText>If Contract Freight Terms do not meet Standard Freight Terms, describe terms in this this field</inlineHelpText>
        <label>Freight Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight_Terms__c</fullName>
        <label>Freight Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Prepaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepaid &amp; Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepaid &amp; Charged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freight Collect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepaid &amp; Allowed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collect &amp; Allowed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will Call</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Index_Based_Pricing__c</fullName>
        <label>Index Based Pricing</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market_Approval_Type__c</fullName>
        <description>April 2014 GI Approvals: Market Approval Type</description>
        <label>Market Approval Type</label>
        <picklist>
            <picklistValues>
                <fullName>Rail Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pipe Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Container Approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Powder_Shuttle__c</fullName>
        <label>Powder Shuttle</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prebate_Description__c</fullName>
        <label>Prebate Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prebate__c</fullName>
        <label>Prebate</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pricing_Description__c</fullName>
        <label>Pricing Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pricing_Referenced_in_Agreement__c</fullName>
        <label>Pricing Referenced in Agreement</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pricing_To_Be_Reviewed__c</fullName>
        <description>Description of when pricing should be reviewed</description>
        <label>Pricing To Be Reviewed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>April 2014 GI Approvals: Priority</description>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rebate_Description__c</fullName>
        <label>Rebate Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rebate__c</fullName>
        <label>Rebate</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stocking_Agreement__c</fullName>
        <label>Stocking Agreement</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <description>April 2014 GI Approvals: Technology</description>
        <label>Technology</label>
        <picklist>
            <controllingField>Market_Approval_Type__c</controllingField>
            <picklistValues>
                <fullName>Anticipated approval date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epoxy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flowliner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOT 120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOT 150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID Coatings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pipeclad 2000 FBE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pipeclad 2040 ARO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pipeclad 2040 Flex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roughcoat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tank Liner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urethane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waterborne (WB)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aquaguard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trigger_Date_of_Pricing__c</fullName>
        <label>Trigger Date of Pricing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valspar_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User field referenced from approval workflow.  CHG-520797</description>
        <label>Valspar Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>GI_AllContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>General Industrial</value>
        </filters>
        <label>GI All Contracts</label>
    </listViews>
    <listViews>
        <fullName>GI_MasterContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>General Industrial</value>
        </filters>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract.Valspar_Master_Contract_Record_Type</value>
        </filters>
        <label>GI Master Contracts</label>
    </listViews>
    <listViews>
        <fullName>GI_MkApContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>General Industrial</value>
        </filters>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract.GI_Market_Approval</value>
        </filters>
        <label>GI Market Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <recordTypes>
        <fullName>GI_Market_Approval</fullName>
        <active>true</active>
        <description>GI Market Approvals based on Technology</description>
        <label>GI Market Approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>Valspar_Master_Contract_Record_Type</fullName>
        <active>true</active>
        <description>Master contract record type for Valspar.</description>
        <label>Valspar Master Contract Record Type</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>